--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <video id="videojs-panorama-player" class="video-js vjs-default-skin" src=""  crossorigin="anonymous" controls>
-    <source src="assets/complex-360.mp4" type='video/mp4'>
+    <source src="assets/shark.mp4" type='video/mp4'>
   </video>
   <ul>
     <li><a href="/test/">Run unit tests in browser.</a></li>
@@ -25,7 +25,7 @@
       player.width(960), player.height(400);
 
       player.panorama({
-        clickAndDrag: true,
+        clickAndDrag: false,
         callback: function () {
           player.play();
         }
