--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
         player.panorama({
           clickAndDrag: true,
+          clickToToggle: true,
           callback: function () {
             player.play();
           }
