fix some rendering issue.
Former-commit-id: ff03af4fbde6818cde4ad1c2495d24155721f9f1

--- a/index_fisheye.html
+++ b/index_fisheye.html
@@ -59,6 +59,10 @@
             backToVerticalCenter: false,
             backToHorizonCenter: false,
             clickToToggle: true,
+            maxLat: -10,
+            initLat: -10,
+            initLon: -270,
+            rotateX: -Math.PI,
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
             videoType: "fisheye",
             callback: function () {
