--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     }
     (function(window, videojs) {
         var player = window.player = videojs('videojs-panorama-player', {}, function () {
+            window.addEventListener("resize", function () {
+                var canvas = player.getChild('Canvas');
+                canvas.handleResize();
+            });
         });
         var videoElement = document.getElementById("videojs-panorama-player");
         var width = videoElement.offsetWidth;
