add fisheye documentation.

--- a/index_fisheye.html
+++ b/index_fisheye.html
@@ -28,7 +28,7 @@
 <body>
 <div class="player_wrapper">
     <div class="player_container">
-        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster.jpg"  crossorigin="anonymous" controls>
+        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster-2.jpg"  crossorigin="anonymous" controls>
             <source src="assets/fisheye.mp4" type='video/mp4'>
         </video>
     </div>
