add mobile buffering detect and auto orientation
Former-commit-id: c818340c179e84ac9eeca3de1d0b2d5e5a165297

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <script src="/bower_components/videojs_5/dist/video.js"></script>
-<script src="bower_components/three.js/three.js"></script>
+<script src="/bower_components/three.js/three.js"></script>
 <script src="/dist/videojs-panorama.v5.js"></script>
 <script>
     function isMobile() {
