--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         player.width(width), player.height(height);
         player.panorama({
             clickToToggle: true,
+            autoMobileOrientation: true,
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
             callback: function () {
                 if(!isMobile()) player.play();
