--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         var player = window.player = videojs('videojs-panorama-player', {}, function () {
             window.addEventListener("resize", function () {
                 var canvas = player.getChild('Canvas');
-                canvas.handleResize();
+                if(canvas) canvas.handleResize();
             });
         });
         var videoElement = document.getElementById("videojs-panorama-player");
