add video.js 4 production support

--- a/index_v4.html
+++ b/index_v4.html
@@ -37,7 +37,7 @@
     <li><a href="/test/">Run unit tests in browser.</a></li>
     <li><a href="/docs/api/">Read generated docs.</a></li>
 </ul>
-<script src="/bower_components/videojs_4/dist/video-js/video.dev.js"></script>
+<script src="/bower_components/videojs_4/dist/video-js/video.js"></script>
 <script src="bower_components/three.js/three.js"></script>
 <script src="/dist/videojs-panorama.v4.js"></script>
 <script>
