--- a/index_v4.html
+++ b/index_v4.html
@@ -56,6 +56,7 @@
         });
 
         player.panorama({
+            autoMobileOrientation: true,
             callback: function () {
                 if(!isMobile()) player.play();
             }
