update initial fov
Former-commit-id: da7624a3399508df176839b621571289c46ee146

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         player.panorama({
             clickToToggle: true,
             autoMobileOrientation: true,
+            initFov: 100,
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
             callback: function () {
                 if(!isMobile()) player.play();
