--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="/bower_components/videojs_5/dist/video-js.css" rel="stylesheet">
     <link href="/dist/videojs-panorama.css" rel="stylesheet">
     <style>
+        body{
+            margin: 0;
+        }
+        body.vjs-full-window .player_wrapper{
+            position: static;
+        }
         .player_wrapper{
             position: relative;
             max-width: 960px;
@@ -15,7 +21,6 @@
         .player_container{
             padding-top: 56.25%;
         }
-
         #videojs-panorama-player{
             position: absolute;
             width: 100%;
@@ -55,7 +60,7 @@
         var height = videoElement.offsetHeight;
         player.width(width), player.height(height);
         player.panorama({
-            clickToToggle: true,
+            clickToToggle: (!isMobile()),
             autoMobileOrientation: true,
             initFov: 100,
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
