add videojs 4 support

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         max-width: 960px;
         width: 100%;
       }
+      body.vjs-full-window .player_wrapper{
+        position: static;
+      }
       .player_container{
         padding-top: 56.25%;
       }
