update videojs code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <!-- Video.js 5 -->
-    <link href="http://vjs.zencdn.net/5.8/video-js.css" rel="stylesheet">
-    <script src="http://vjs.zencdn.net/5.8/video.js"></script>
+    <link href="videojs/v5/video-js.min.css" rel="stylesheet">
+    <script src="videojs/v5/video.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.js"></script>
     <!-- Common -->
     <link href="dist/videojs-panorama.min.css" rel="stylesheet">
