--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         top: 0;
         left: 0;
       }
+      .vjs-full-window #videojs-panorama-player{
+        position: fixed;
+      }
     </style>
   </head>
   <body>
@@ -74,12 +77,22 @@
         return check;
       }
       (function(window, videojs) {
-        var player = videojs('videojs-panorama-player');
-
+        var player = window.player = videojs('videojs-panorama-player', {}, function () {
+          window.addEventListener("resize", function () {
+            var canvas = player.getChild('Canvas');
+            if(canvas) canvas.handleResize();
+          });
+        });
+        var videoElement = document.getElementById("videojs-panorama-player");
+        var width = videoElement.offsetWidth;
+        var height = videoElement.offsetHeight;
+        player.width(width), player.height(height);
         player.panorama({
-          autoMobileOrientation: true,
-          clickAndDrag: true,
           clickToToggle: (!isMobile()),
+          clickAndDrag: true,
+          autoMobileOrientation: true,
+          initFov: 100,
+          NoticeMessage: (isMobile())? "please move your phone" : "please use your mouse drag and drop the video",
           callback: function () {
             if(!isMobile()) player.play();
           }
