add from to feature, support one time animations.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
             autoMovingTimeline: [
                 {
                     keypoint: 1000,
-                    changeValue:{
+                    from: {
+                        lon: -180,
+                        lat: 0,
+                    },
+                    to:{
                         lon: -180 + -360,
                         lat: 0
                     },
