using minify version of all plugins

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Common -->
     <link href="dist/videojs-panorama.min.css" rel="stylesheet">
     <!-- Video.js 5 -->
-    <script src="dist/videojs-panorama.v5.js"></script>
+    <script src="dist/videojs-panorama.v5.min.js"></script>
     <style>
       .player_wrapper{
         position: relative;
