--- a/index_v4.html
+++ b/index_v4.html
@@ -15,7 +15,7 @@
     <!-- Common -->
     <link href="dist/videojs-panorama.min.css" rel="stylesheet">
     <!-- Video.js 5 -->
-    <script src="dist/videojs-panorama.v4.js"></script>
+    <script src="dist/videojs-panorama.v4.min.js"></script>
     <style>
       .player_wrapper{
         position: relative;
