add fisheye support, solve blurry issue if helper canvas is too small, add single view support to 3d canvas

--- a/index_3d.html
+++ b/index_3d.html
@@ -64,7 +64,10 @@
             autoMobileOrientation: true,
             backToVerticalCenter: false,
             backToHorizonCenter: false,
-            initFov: 100,
+            initFov: 75,
+            initLat: -15,
+            initLon: -185,
+            clickAndDrag: true,
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
             videoType: "3dVideo",
             callback: function () {
