add mobile pinch support
Former-commit-id: c97f43da9feeac6bb3217a888e97d55030e17b90

--- a/index_3d.html
+++ b/index_3d.html
@@ -76,7 +76,8 @@
         });
 
         player.on("VRModeOn", function(){
-            player.controlBar.fullscreenToggle.trigger("tap");
+            if(!player.isFullscreen())
+                player.controlBar.fullscreenToggle.trigger("tap");
         });
     }(window, window.videojs));
 </script>
