--- a/index_v4.html
+++ b/index_v4.html
@@ -70,7 +70,8 @@
         });
 
         player.on("VRModeOn", function(){
-            player.controlBar.fullscreenToggle.trigger("tap");
+            if(!player.isFullscreen())
+                player.controlBar.fullscreenToggle.trigger("tap");
         });
     }(window, window.videojs));
 </script>
