--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             VREnable: isMobile(),
             NoticeMessage: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video",
             callback: function () {
-                if(!isMobile()) player.play();
+                //if(!isMobile()) player.play();
             }
         });
 
