--- a/index.html
+++ b/index.html
@@ -53,28 +53,18 @@
         var player = window.player = videojs('videojs-panorama-player', {
             autoplay: true,
             plugins: {
-                panorama: {
-                    clickToToggle: true,
-                    clickAndDrag: true,
-                    autoMobileOrientation: true,
-                    initFov: 100,
-                    VREnable: isMobile(),
-                    Notice: {
-                        Enable: true,
-                        Message: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video"
-                    }
-                }
             }
         });
-        var videoElement = document.getElementById("videojs-panorama-player");
-        var width = videoElement.offsetWidth;
-        var height = videoElement.offsetHeight;
-        player.width(width), player.height(height);
-//
-//        player.on("VRModeOn", function(){
-//            if(!player.isFullscreen())
-//                player.controlBar.fullscreenToggle.trigger("tap");
-//        });
+
+        var panorama = player.panorama({
+            clickToToggle: true,
+            autoMobileOrientation: true,
+            VREnable: true,
+            Notice: {
+                Enable: true,
+                Message: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video"
+            }
+        });
 
         window.player = player;
     }(window, window.videojs));
