--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <body>
 <div class="player_wrapper">
     <div class="player_container">
-        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster.jpg"  crossorigin="anonymous" controls>
-            <source src="assets/shark.mp4" type='video/mp4'>
+        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster-360.jpg"  crossorigin="anonymous" controls>
+            <source src="http://global-imagination-fisheye.herokuapp.com/assets/shark.mp4" type='video/mp4'>
         </video>
     </div>
 </div>
@@ -51,12 +51,13 @@
     }
     (function(window, videojs) {
         var player = window.player = videojs('videojs-panorama-player', {
-            autoplay: true,
             plugins: {
             }
         });
 
         var panorama = player.panorama({
+            PanoramaThumbnail: true,
+            KeyboardControl: true,
             clickToToggle: true,
             autoMobileOrientation: true,
             VREnable: true,
