--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="player_wrapper">
     <div class="player_container">
         <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster-360.jpg"  crossorigin="anonymous" controls>
-            <source src="http://global-imagination-fisheye.herokuapp.com/assets/shark.mp4" type='video/mp4'>
+            <source src="assets/shark.mp4" type='video/mp4'>
         </video>
     </div>
 </div>
