fix rendering issue on IE 11.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             PanoramaThumbnail: true,
             KeyboardControl: true,
             clickToToggle: true,
+            VREnable: true,
             Notice: {
                 Enable: true,
                 Message: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video"
