--- a/index_180.html
+++ b/index_180.html
@@ -28,29 +28,18 @@
             top: 0;
             left: 0;
         }
-        .vjs-marker{
-            white-space: normal;
-            width: 100px;
-            font-size: 2em;
-        }
-        .assets{
-            display: none;
-        }
     </style>
 </head>
 <body>
 <div class="player_wrapper">
     <div class="player_container">
-        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster-360.jpg" crossorigin="anonymous" controls>
-            <source src="assets/shark.mp4" type='video/mp4'>
+        <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="assets/poster-360.jpg"  crossorigin="anonymous" controls>
+            <source src="assets/180.mp4" type='video/mp4'>
         </video>
-    </div>
-    <div class="assets">
-        <img id="img1" src="assets/7-2-a-alphabet-png.png" />
     </div>
 </div>
 
-<script src="/bower_components/videojs_5/dist/video.js"></script>
+<script src="//vjs.zencdn.net/5.19/video.js"></script>
 <script src="/bower_components/three.js/three.js"></script>
 
 <script src="/dist/videojs-panorama.js"></script>
@@ -61,42 +50,20 @@
         return check;
     }
     (function(window, videojs) {
-        var player = window.player = videojs('videojs-panorama-player', {});
-
-        var panorama = player.panorama({
-            PanoramaThumbnail: true,
-            KeyboardControl: true,
-            clickToToggle: true,
-            VREnable: true,
-            Notice: {
-                Enable: true,
-                Message: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video"
-            },
-            Markers: [
-                {
-                    location: {
-                        lat: 0,
-                        lon: 180
-                    },
-                    radius: 500,
-                    element: document.getElementById('img1')
-                },
-                {
-                    location: {
-                        lat: 20,
-                        lon: 160
-                    },
-                    radius: 500,
-                    element: "This is text 2 with long text",
-                    onShow: function(){
-                        console.log("text 2 is shown");
-                    },
-                    onHide: function(){
-                        console.log("text 2 is hidden");
+        var player = window.player = videojs('videojs-panorama-player', {
+            autoplay: true,
+            plugins: {
+                panorama: {
+                    videoType: "VR1803D",
+                    clickToToggle: true,
+                    autoMobileOrientation: true,
+                    VREnable: true,
+                    Notice: {
+                        Enable: true,
+                        Message: (isMobile())? "please drag and drop the video" : "please use your mouse drag and drop the video"
                     }
                 }
-            ],
-            VRGapDegree: 0
+            }
         });
 
         window.player = player;
