add react example

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <video id="videojs-panorama-player" class="video-js vjs-default-skin" poster="../assets/poster-360.jpg" crossorigin="anonymous" controls>
-    <source src="../assets/shark.mp4" type='video/mp4'>
+    <source src="/assets/shark.mp4" type='video/mp4'>
 </video>
 
 <script src="/bower_components/three.js/three.js"></script>
